# raai_summer_school_cv_2021

./: README.md
pytorch_inference/: README.md  environment_cpu.yml  environment_cuda.yml
pytorch_inference/notebooks/: coco_clsidx_to_labels.json  model_inference.ipynb
pytorch_inference/segmentator/: CMakeLists.txt  package.xml
pytorch_inference/segmentator/docker/: Dockerfile.cpu  Dockerfile.nvidia  README.md  build.sh  into.sh  start.sh
pytorch_inference/segmentator/launch/: main.launch
pytorch_inference/segmentator/rviz/: main.rviz
pytorch_inference/segmentator/scripts/: segmentator.py  visualizer.py
pytorch_training/notebooks/: fine_tuning.ipynb  transfer_learning.ipynb
ros_basics/: README.md
ros_basics/notebooks/: bag_file_in_python.ipynb
ros_basics/scripts/: crop_image.py
